# PlantOS

./: .gitignore  LICENSE  PlantOS_BOOTSTRAP.md  README.md  RESUME.md
.github/workflows/: lint.yml
backend/: README.md
backend/plantos_backend/: README.md  pyproject.toml
backend/plantos_backend/src/plantos_backend/: __init__.py  __main__.py  app.py  settings.py
backend/plantos_backend/src/plantos_backend/ai/: graphs.py  providers.py
backend/plantos_backend/src/plantos_backend/models/: __init__.py  common.py  experiments.py  marketplace.py  plants.py  propagation.py
backend/plantos_backend/src/plantos_backend/repositories/: plants.py
backend/plantos_backend/src/plantos_backend/routers/: __init__.py  ai.py  experiments.py  marketplace.py  meta.py  plants.py  propagation.py  schedules.py
backend/plantos_backend/src/plantos_backend/schemas/: ai.py  experiments.py  marketplace.py  plants.py  propagation.py  schedules.py
backend/plantos_backend/src/plantos_backend/services/: ai.py  experiments.py  marketplace.py  propagation.py  reminders.py  scheduler.py  storage.py
backend/plantos_backend/src/plantos_backend/storage/: memory.py
backend/plantos_backend/tests/: conftest.py  test_firestore_models.py  test_plants_api.py  test_scheduler.py
docs/issues/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md
docs/product/: PLANT-OS_PRODUCT_OVERVIEW.md
docs/spec/: PLANT-OS_SPEC.md  README.md
docs/spec/v1.0/: PLANT-OS_SPEC.md
frontend/: .eslintrc.cjs  App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/api/: client.ts
frontend/src/components/: CreateExperimentModal.tsx  PlantCard.tsx
frontend/src/hooks/: useNotifications.ts
frontend/src/navigation/: AppNavigator.tsx
frontend/src/screens/: DiagnosisScreen.tsx  DiagnosticsScreen.tsx  ExperimentsScreen.tsx  HomeScreen.tsx  MarketplaceScreen.tsx  NewPlantScreen.tsx  PlantDetailScreen.tsx
frontend/src/storage/: sqlite.ts  sync.ts
frontend/src/store/: plantStore.ts
frontend/src/theme/: index.ts
frontend/src/types/: navigation.ts  plants.ts
